Notas en la presentacion ToE

--- a/TorreElefante/contenido.tex
+++ b/TorreElefante/contenido.tex
@@ -2,8 +2,9 @@
 	\maketitle
 \end{frame}
 \note[itemize]{
-	\item Una de las mejores historias del ciclio de Conan
+	\item Una de las mejores historias del ciclo de Conan
 	\item Una de las mejores historias de REH
+	\item Uno de mis relatos favoritos, tal vez mi relato favorito del ciclo de Conan.
 }
 
 \begin{frame}{La torre del elefante}
@@ -24,8 +25,8 @@
 \end{frame}
 \note[itemize]{
 	\item Voy a dar crédito a los artistas cuando no sea evidente
-	\item Es la historia de espada y hechizeria por antonomasia
-	\item Explicar espada y hechizeria vs espada y brujeria
+	\item Es la historia de espada y hechicería por antonomasia
+	\item Explicar espada y hechicería vs espada y brujería
 }
 
 \begin{frame}{Publicación}
@@ -51,10 +52,11 @@
 \end{columns}
 \end{frame}
 \note[itemize]{
-	\item Decir que es la historia que yo siempre recomiendo a alguien que nunca ha leido al Conan de REH
+	\item La historia se encuentra en muchas recopilaciones y en varias ediciones tanto en Inglés como en Español
+	\item Ésta es la historia que yo siempre recomiendo a alguien que nunca ha leido al Conan de REH
 }
 
-\begin{frame}{Publicación}
+\begin{frame}{La primera ilustración}
 	\begin{columns}
 		\column[t]{0.4\textwidth}
 		\begin{figure}[htb]
@@ -65,16 +67,13 @@
 		\column[t]{0.6\textwidth}
 		\begin{itemize}
 			\item Esta ilustración acompaña a la primera edición de la historia
-			\item La primera ilustración del relato
 		\end{itemize}
 	\end{columns}
 \end{frame}
-\note{
-Muchos ilustradores dibujan alguna escena de esta historia para sus portafolios
-
-Ésta fue la primera ilustración del relato
-
-Esto se vuelve interesante por una controversia aue explicare mas adelante
+\note[itemize]{
+	\item Muchos ilustradores dibujan alguna escena de esta historia para sus portafolios
+	\item Ésta fue la primera ilustración del relato
+	\item Esto se vuelve interesante por una controversia aue explicare mas adelante
 }
 
 \begin{frame}{Orden de publicación del ciclo de Conan}
@@ -83,11 +82,10 @@ Esto se vuelve interesante por una controversia aue explicare mas adelante
   \includegraphics[width=0.32\textwidth]{img/OrdenPublicacion}
 \end{figure}
 \end{frame}
-\note{
-La torre del elefante forma parte del ciclo de Conan, que consta de 18 a 25 historias de REH, dependiendo de cómo queramos contarlas.
-Si solo se cuentan historias publicadas en la vida de REH, son 18 (o 17 dependiendo de si se cuenta o no \say{La hija del gigante helado}).
-
-Si se añaden la historias que fueron rechazadas por los editores durante la vida de REH, y luego publicadas después de su muerte; así como fragmentos que el autor dejó inconclusos y que fueron --muchos años después-- terminados y publicados por otros autores, ahí la cuenta sube a 25.
+\note[itemize]{
+	\item La torre del elefante forma parte del ciclo de Conan, que consta de 18 a 25 historias de REH, dependiendo de cómo queramos contarlas.
+	\item Si solo se cuentan historias publicadas en la vida de REH, son 18 (o 17 dependiendo de si se cuenta o no \say{La hija del gigante helado}).
+	\item Si se añaden la historias que fueron rechazadas por los editores durante la vida de REH, y luego publicadas después de su muerte; así como fragmentos que el autor dejó inconclusos y que fueron --muchos años después-- terminados y publicados por otros autores, ahí la cuenta sube a 25.
 }
 
 \begin{frame}{Cronología ficticia del personaje}
@@ -96,17 +94,14 @@ Si se añaden la historias que fueron rechazadas por los editores durante la vid
   \includegraphics[width=0.85\textwidth]{img/Cronollogias}
 \end{figure}
 \end{frame}
-\note{
-Ha habido varios intentos de establecer una cronología de la vida ficticia de Conan. De estos intentos el más famoso es el de Miller/Clark/de Camp, porque contó con la bendición de REH en su versión más temprana.
-
-Aunque hay por los menos otros cuatro intentos importantes, que ya incluyen los trabajos de los otros autores escritos muchos años después de la muerte de REH.
-
-Casi todas las cronologías coinciden en que este debería ser el segundo *relato* de Conan, (de los escritos por REH), en el orden de la vida del personaje.
-Es decir, donde nos encontramos con un Conan muy joven. Aunque en el relato su edad no se menciona, de acuerdo a las cronologías Conan deberia haber tenido cerca de 17 años.
-
-De las otras obras originales de REH anteriores en la cronología dos no son cuentos.
-El ensayo La era Hiboria y el poema Cimeria.
-Finalmente a la única historia que la antecede: La hija del gigante helado a veces se le disputa su status de historia de Conan.
+\note[itemize]{
+	\item Ha habido varios intentos de establecer una cronología de la vida ficticia de Conan. De estos intentos el más famoso es el de Miller/Clark/de Camp, porque contó con la bendición de REH en su versión más temprana.
+	\item Aunque hay por los menos otros cuatro intentos importantes, que ya incluyen los trabajos de los otros autores escritos muchos años después de la muerte de REH.
+	\item Casi todas las cronologías coinciden en que este debería ser el segundo *relato* de Conan, (de los escritos por REH), en el orden de la vida del personaje.
+	\item Es decir, donde nos encontramos con un Conan muy joven. Aunque en el relato su edad no se menciona, de acuerdo a las cronologías Conan deberia haber tenido cerca de 17 años.
+	\item De las otras obras originales de REH anteriores en la cronología dos no son cuentos.
+	\item El ensayo La era Hiboria y el poema Cimeria.
+	\item Finalmente a la única historia que la antecede: La hija del gigante helado a veces se le disputa su status de historia de Conan.
 }
 
 \begin{frame}{Espacio en la edad Hiboria}
@@ -124,11 +119,19 @@ Finalmente a la única historia que la antecede: La hija del gigante helado a ve
  \caption{La ciudad de Arenjun en la provincia de Zamora. La \say{ciudad de los ladrones}}
  \end{figure}
 \end{frame}
-\note{
-
+\note[itemize]{
+	\item De nuevo en la historia jamás se menciona el nombre de la ciudad en donde sucede la aventura.
+	\item Pero si se analiza la obra de REH en conjunto y en particular con la cronología avanzada de Conan. La mayoría está de acuerdo de que tuvo que pasar en Arejun una ciudad de la provincia de Zamora
+	\item REH, no dejo un mapa oficial de la era hiboria, pero deja constancia de que si había dibujado un mapa y que cuando vio el mapa que le mandaron Miller y Clark; REH mencionó que su mapa y el de ellos era muy parecido
+	\item Entonces tomando en cuenta que todo esto es una geografía imaginaria, y que además fue en su mayoría creada años después de muerte de su autor original, por mucho estudiosos de la obra, es decir tomen todo esto con un granito de sal.
+	\item Habiendo dicho esto si hay como que un consenso general en que el mapa debe ser algo como este.
 }
 
 \section{Adaptaciones}
+\note[itemize]{
+	\item Hablar de la importancia de los comics en Conan, y como han sido los únicos medios en los que se ha adaptado la obra original de Howard
+	\item Películas y videojuegos han usado el mundo creado por Howard, la era hiboria pero han hecho historias aparte.
+}
 
 \begin{frame}{Conan the barbarian}
 \begin{columns}
@@ -153,14 +156,12 @@ Finalmente a la única historia que la antecede: La hija del gigante helado a ve
     \end{itemize}
 \end{columns}
 \end{frame}
-\note{
-El dibujante e ilustrado Ingles Barry Windsor Smith, se volvio famoso por su trabajo en este titulo entre 1970 y 1973, despues dibujaria Weapon X.
-
-El dibujante Italoamericano Sal Buscema, entitno en uno de sus primeros trabajos (antes de que se volviera artista principal).
-
-Roy Thomas, es quein introdujo el personaje de Coonan a los comics, es probablemente el mejor adaptador de historias de REH al Comic. Ha creado muchisimos peronajes de Marvel, probablemente la figura mas influyente de Marvel despues de Stand Lee.
-
-Se le da credito como editor al jefe de la compania Satand Lee
+\note[itemize]{
+	\item En el canal de MKV, él dice que este es uno de los mejores cómics, no solo de Conan, ni de Marvel sino de su época de la década de los 70s.
+	\item El dibujante e ilustrado Ingles Barry Windsor Smith, se volvio famoso por su trabajo en este titulo entre 1970 y 1973, despues dibujaria Weapon X.
+	\item El dibujante Italoamericano Sal Buscema, entitno en uno de sus primeros trabajos (antes de que se volviera artista principal).
+	\item Roy Thomas, es quein introdujo el personaje de Coonan a los comics, es probablemente el mejor adaptador de historias de REH al Comic. Ha creado muchisimos peronajes de Marvel, probablemente la figura mas influyente de Marvel despues de Stand Lee.
+	\item Se le da credito como editor al jefe de la compania Satand Lee
 }
 
 % \begin{frame}{}
@@ -217,14 +218,11 @@ Se le da credito como editor al jefe de la compania Satand Lee
     \end{itemize}
 \end{columns}
 \end{frame}
-\note{
-Este seria para mi el comic perfecto o el mas representativo de la edad de oro de Conan (ya se que tecnicament es la edad de bronze de los comics de lo 70 al 85)
-
-El Artista es John Buscema, es el hermano mayor de Sal Buscema. Tambien italoamericano, es para mi el mejor dibujante de Conan, de hecho, si a mi me piden que cierre los ojos y me imagine a Conan me lo imagino como lo dibujaba Jhon Buscema.
-
-El artista Filipino Alfredo Alcala es el segundo artista, probablemnet en la escenas de la narracion de YogKhosha. El ya habia hecho un personaje parecido a Conan, Voltar y se dice que Frank Frazetta se inspiro en el para hacer su propio Conan
-
-El artista norteamericano Earl Norem en la portada. Es probablemnete el artista que mas portadas de TSSC hizo durante la serie.
+\note[itemize]{
+	\item Este seria para mi el comic perfecto o el mas representativo de la edad de oro de Conan (ya se que tecnicament es la edad de bronze de los comics de lo 70 al 85)
+	\item El Artista es John Buscema, es el hermano mayor de Sal Buscema. Tambien italoamericano, es para mi el mejor dibujante de Conan, de hecho, si a mi me piden que cierre los ojos y me imagine a Conan me lo imagino como lo dibujaba Jhon Buscema.
+	\item El artista Filipino Alfredo Alcala es el segundo artista, probablemnet en la escenas de la narracion de YogKhosha. El ya habia hecho un personaje parecido a Conan, Voltar y se dice que Frank Frazetta se inspiro en el para hacer su propio Conan
+	\item El artista norteamericano Earl Norem en la portada. Es probablemnete el artista que mas portadas de TSSC hizo durante la serie.
 }
 
 % \begin{frame}{}
@@ -293,23 +291,16 @@ El artista norteamericano Earl Norem en la portada. Es probablemnete el artista 
     \end{itemize}
 \end{columns}
 \end{frame}
-\note{
-Probablemnete la mejor adaptacion de la obra original de REH a un Comic.
-Uno de lo mejore miniarcos de Conan de DrakHrse, forma parte de su mejor volume el que simpremente se llamaba Conan
-Hereda parte del equiop creativo que ya habia ganado el Eisner por el numero 0
-Cuando vi por primera vez esta serie era una forma de hacer comics que nunca habia visto (sin entintador)
-Estos numeros tambien ocupan esa tecnica
-
-El canadiense Cary Nord en los trazos, que como dijimos gano el Eisner por el numero 0 de Conan, uno de los grandes dibujantes de Conan de todos los tiempos.
-
-Es escritor Estadounidense Kurt Busiek, el gran escritor de la corrida de Conan con DH, famoso por su comic Astro City, aqui hace una gran labor adaptando.
-
-El colorista estadounidense Dave Steward, que es una garantia, pues el solo tiene mas Eisners que todos los antes mencionados. Y que el pobre sufre la maldicion de los homonimos.
-
-El artista/pintor mexicano Jose Lardonn, de Veracruz, tambien con Eisner junto con Richard Stalking y que se ha dedicado mas al arte que a los comics. Este es uno de lo pocos ejemplos en las portadas. Kudos por la tercera portada
-
-El britanico Richard Starkings aka Comicraft, que es el mejor y mas famoso letrista en los comics hoy dia, famoso por elephanmen, y aun ligado a Conan con la mas reciente publicacion de Titan
-
+\note[itemize]{
+	\item Probablemnete la mejor adaptacion de la obra original de REH a un Comic.
+	\i tem Uno de lo mejore miniarcos de Conan de DrakHrse, forma parte de su mejor volume el que simpremente se llamaba Conan
+	\item Hereda parte del equiop creativo que ya habia ganado el Eisner por el numero 0
+	\item Cuando vi por primera vez esta serie era una forma de hacer comics que nunca habia visto (sin entintador).Estos numeros tambien ocupan esa tecnica
+	\item El canadiense Cary Nord en los trazos, que como dijimos gano el Eisner por el numero 0 de Conan, uno de los grandes dibujantes de Conan de todos los tiempos.
+	\item Es escritor Estadounidense Kurt Busiek, el gran escritor de la corrida de Conan con DH, famoso por su comic Astro City, aqui hace una gran labor adaptando.
+	\item El colorista estadounidense Dave Steward, que es una garantia, pues el solo tiene mas Eisners que todos los antes mencionados. Y que el pobre sufre la maldicion de los homonimos.
+	\item El artista/pintor mexicano Jose Lardonn, oriundo de Veracruz, tambien con Eisner junto con Richard Stalking y que se ha dedicado mas al arte que a los comics. Este es uno de lo pocos ejemplos en las portadas. Kudos por la tercera portada
+	\item El britanico Richard Starkings aka Comicraft, que es el mejor y mas famoso letrista en los comics hoy dia, famoso por elephanmen, y aun ligado a Conan con la mas reciente publicacion de Titan
 }
 
 \begin{frame}{Acción comics: La torre del elefante}
@@ -337,12 +328,10 @@ El britanico Richard Starkings aka Comicraft, que es el mejor y mas famoso letri
 		\end{itemize}
 	\end{columns}
 \end{frame}
-\note{
-Editorial Chilen Action Comics
-
-El artista argentino Enrique \say{Kike} alcatena, que ya antes habia dibujado a Conan para Marvel.
-
-El guionista y periodista Claudio Álvarez que forma parte de los fundadores de la editorial y que asumo que es Chileno.
+\note[itemize]{
+	\item Editorial Chilen Action Comics
+	\item El artista argentino Enrique \say{Kike} alcatena, que ya antes habia dibujado a Conan para Marvel.
+	\item El guionista y periodista Claudio Álvarez que forma parte de los fundadores de la editorial y que asumo que es Chileno.
 }
 
 \begin{frame}{Conan illustré: La Tour de l’Eléphant}
@@ -369,9 +358,9 @@ El guionista y periodista Claudio Álvarez que forma parte de los fundadores de 
 		\end{itemize}
 	\end{columns}
 \end{frame}
-\note{
-El ilustrado Frances Valentin Sécher, que ya antes habia hecho una obra de Conana ilustrada, pero ue es con esta l a que alacanza su prime.
-Es tan buena que la editorial Titan esta en platicas para hacer una edicion en Ingles (que se publicará en Agosto de este año)
+\note[itemize]{
+	\item El ilustrado Frances Valentin Sécher, que ya antes habia hecho una obra de Conana ilustrada, pero ue es con esta l a que alacanza su prime.
+	\item Es tan buena que la editorial Titan esta en platicas para hacer una edicion en Ingles (que se publicará en Agosto de este año)
 }
 % \begin{frame}{}
 % \begin{figure}[htp]
@@ -409,6 +398,12 @@ Es tan buena que la editorial Titan esta en platicas para hacer una edicion en I
 % \end{frame}
 
 \section{Resumen}
+\note[itemize]{
+	\item Toda la información anterior fue meramente monográfica.
+	\item De aquí en adelante todo es un spoiler.
+	\item Recomendar que se puede leer o escuchar la historia original en muchísimos lugares
+	Voy a hacer un resumen usando viñetas de los antes mencionados comics
+}
 
 \begin{frame}{}
 \begin{columns}
@@ -671,6 +666,10 @@ Finalmente, Conan logra salir de la torre y se pregunta si todo lo que paso ha s
 }
 
 \section{Personajes}
+\note[itemize]{
+	\item
+}
+
 \begin{frame}{Conan}
 \begin{columns}
 \column[t]{0.4\textwidth}
@@ -697,8 +696,9 @@ Finalmente, Conan logra salir de la torre y se pregunta si todo lo que paso ha s
 \end{figure}
 \end{columns}
 \end{frame}
-\note{
-Mencionar idea del salvaje noble
+\note[itemize]{
+	\item No olvidar que Conan representa varios arquetipos en sus diferentes aventuras.
+	\item Esta al ser una de la primeras aventuras de su juventud predomina la idea del “salvaje noble”
 }
 
 \begin{frame}{Tauros}
@@ -727,8 +727,8 @@ Mencionar idea del salvaje noble
 \end{figure}
 \end{columns}
 \end{frame}
-\note{
-
+\note[itemize]{
+	\item
 }
 
 \begin{frame}{Yag-kosha}
@@ -759,8 +759,8 @@ Mencionar idea del salvaje noble
 \end{figure}
 \end{columns}
 \end{frame}
-\note{
-
+\note[itemize]{
+	\item
 }
 
 \begin{frame}{Yara}
@@ -788,8 +788,8 @@ Mencionar idea del salvaje noble
 \end{figure}
 \end{columns}
 \end{frame}
-\note{
-
+\note[itemize]{
+	\item
 }
 
 \begin{frame}{Kothio anónimo}
@@ -817,8 +817,8 @@ Mencionar idea del salvaje noble
 \end{figure}
 \end{columns}
 \end{frame}
-\note{
-
+\note[itemize]{
+	\item
 }
 
 \begin{frame}{La torre del elefante}
@@ -845,8 +845,8 @@ Mencionar idea del salvaje noble
 \end{figure}
 \end{columns}
 \end{frame}
-\note{
-
+\note[itemize]{
+	\item
 }
 
 \begin{frame}{Araña gigante}
@@ -873,8 +873,8 @@ Mencionar idea del salvaje noble
 \end{figure}
 \end{columns}
 \end{frame}
-\note{
-
+\note[itemize]{
+	\item No olvidemos que el libro de Tolkien fue publicado en el 54.
 }
 
 \begin{frame}{Los leones}
@@ -905,44 +905,66 @@ Mencionar idea del salvaje noble
 \end{figure}
 \end{columns}
 \end{frame}
-\note{
-
+\note[itemize]{
+	\item  Howard siempre profirió en sus historias profunda admiración por los felinos.
+	\item De hecho siempre que describe a sus protagonistas, no solo en el ciclo de Conan sino en todas sus obras, les da cualidades que son comparables a las de algún felino.
 }
 
 
 \section{Citas interesantes}
-
-\begin{frame}{}
-\begin{exampleblock}{Conan reflexiona sobre religión}
-Había estado muchas horas en cuclillas en los patios de los filósofos, escuchando los razonamientos y discusiones de teólogos y maestros, y se había ido de allí confuso y perplejo y con una sola idea clara: que estaban todos locos.
-\end{exampleblock}
-\say{\textit{He had squatted for hours in the courtyard of the philosophers, listening to the arguments of theologians and teachers, and come away in a haze of bewilderment, sure of only one thing, and that, that they were all touched in the head.}}
-\end{frame}
-\note{
-
+\note[itemize]{
+	\item Poder comparar la prosa económica de Howard en ambos idiomas.
+	\item Tanto para ver que tanta justicia hay en la traducción.
+	\item Recordemos que Howard era poeta y que su lírica se asoma aun en su prosa, que es lo que lo hace excepcional como escritor de Pulp, el efecto de drama
 }
 
-\begin{frame}{}
-\begin{exampleblock}{Hombres civilizados discutiendo}
-Los hombres civilizados son menos amables que los salvajes porque saben que pueden ser descorteses sin correr el riesgo de que les partan la cabeza; por regla general.
+\begin{frame}{Conan reflexiona sobre religión}
+\begin{exampleblock}{}
+He had squatted for hours in the courtyard of the philosophers, listening to the arguments of theologians and teachers, and come away in a haze of bewilderment, sure of only one thing, and that, that they were all touched in the head.
 \end{exampleblock}
-\say{\textit{Civilized men are more discourteous than savages because they know they can be impolite without having their skulls split, as a general thing.}}
-\end{frame}
-\note{
 
+\begin{itemize}
+	\item \textit{ \say{Había estado muchas horas en cuclillas en los patios de los filósofos, escuchando los razonamientos y discusiones de teólogos y maestros, y se había ido de allí confuso y perplejo y con una sola idea clara: que estaban todos locos.} }
+\end{itemize}
+\end{frame}
+\note[itemize]{
+	\item  Esta es una cita que describe mucho de la personalidad de Conan en su edad temprana y que es paradigmática de cómo el personaje evoluciona porque en el Fénix en la espada tiene una opinión muy diferente (y esa historia fue de hecho escrita antes)
 }
 
-\begin{frame}{}
-\begin{exampleblock}{La culpabilidad de una raza sobre sus hombros}
-Y súbitamente todo el miedo y el asco se convirtieron en una profunda compasión. Conan no sabía quién era ese monstruo, pero era tan evidente su terrible y patético sufrimiento, que sin saber por qué, le embargó una abrumadora tristeza. Sintió que estaba presenciando una tragedia cósmica y sintió vergüenza, como si la culpa de toda una raza hubiera caído sobre él.
-\end{exampleblock}
-\say{\textit{And suddenly all fear and repulsion went from him, to be replaced by a great pity. What this monster was, Conan could not know, but the evidences of its sufferings were so terrible and pathetic that a strange aching sadness came over the Cimmerian, he knew not why. He only felt that he was looking upon a cosmic tragedy, and he shrank with shame, as if the guilt of a whole race were laid upon him.}}
-\end{frame}
-\note{
+\begin{frame}{Hombres civilizados discutiendo}
 
+\begin{exampleblock}{}
+Civilized men are more discourteous than savages because they know they can be impolite without having their skulls split, as a general thing.
+\end{exampleblock}
+
+\begin{itemize}
+	\item \textit{ \say{Los hombres civilizados son menos amables que los salvajes porque saben que pueden ser descorteses sin correr el riesgo de que les partan la cabeza; por regla general.} }
+\end{itemize}
+
+\end{frame}
+\note[itemize]{
+	\item Una de las citas más famosas de Howard (ocurre en este relato). Este es Howard en su sentir más íntimo.
+}
+
+\begin{frame}{La culpabilidad de una raza sobre sus hombros}
+\begin{exampleblock}{}
+	And suddenly all fear and repulsion went from him, to be replaced by a great pity. What this monster was, Conan could not know, but the evidences of its sufferings were so terrible and pathetic that a strange aching sadness came over the Cimmerian, he knew not why. He only felt that he was looking upon a cosmic tragedy, and he shrank with shame, as if the guilt of a whole race were laid upon him.
+\end{exampleblock}
+
+\begin{itemize}
+	\item \textit{ \say{Y súbitamente todo el miedo y el asco se convirtieron en una profunda compasión. Conan no sabía quién era ese monstruo, pero era tan evidente su terrible y patético sufrimiento, que sin saber por qué, le embargó una abrumadora tristeza. Sintió que estaba presenciando una tragedia cósmica y sintió vergüenza, como si la culpa de toda una raza hubiera caído sobre él.} }
+\end{itemize}
+
+\end{frame}
+\note[itemize]{
+	\item Mi cita favorita del relato.
 }
 
 \section{Tropes literarios}
+\note[itemize]{
+	\item
+}
+
 \begin{frame}{Espada y hechizeria}
 \begin{columns}
 \column[t]{0.4\textwidth}
@@ -960,8 +982,8 @@ Y súbitamente todo el miedo y el asco se convirtieron en una profunda compasió
  \end{figure}
  \end{columns}
 \end{frame}
-\note{
-
+\note[itemize]{
+	\item
 }
 
 \begin{frame}{Taberna}
@@ -979,8 +1001,8 @@ Y súbitamente todo el miedo y el asco se convirtieron en una profunda compasió
 		\end{figure}
 	\end{columns}
 \end{frame}
-\note{
-
+\note[itemize]{
+	\item
 }
 
 \begin{frame}{Conan el ladrón, el antihéroe}
@@ -998,8 +1020,10 @@ Y súbitamente todo el miedo y el asco se convirtieron en una profunda compasió
  \end{figure}
  \end{columns}
 \end{frame}
-\note{
-
+\note[itemize]{
+	\item Recordemos que Conan tiene distintos estereotipos a lo largo de sus aventuras.
+	\item En esta etapa Conan no es un héroe, no sigue el camino del héroe como diría Joseph Campbell.
+	\item Aunque bueno en los análisis que revise, hay uno donde lo hacen entrar con calzador. Esto no es cierto en esta historia Conan es un antihéroe.
 }
 
 \begin{frame}{Instintos superan la razón}
@@ -1018,8 +1042,8 @@ Y súbitamente todo el miedo y el asco se convirtieron en una profunda compasió
  \end{figure}
  \end{columns}
 \end{frame}
-\note{
-
+\note[itemize]{
+	\item
 }
 
 \begin{frame}{Conan odia y teme lo sobrenatural}
@@ -1042,8 +1066,9 @@ Y súbitamente todo el miedo y el asco se convirtieron en una profunda compasió
  \end{figure}
  \end{columns}
 \end{frame}
-\note{
-
+\note[itemize]{
+	\item Conan no teme a ningún ser humano y menos a la muerte en batalla. Sin embargo, se puede paralizar de terror ante la magia o lo sobrenatural.
+	\item De nuevo en esta etapa de su carrera.
 }
 
 \begin{frame}{Los cimerios escalando}
@@ -1064,8 +1089,8 @@ Y súbitamente todo el miedo y el asco se convirtieron en una profunda compasió
     \end{figure}
   \end{columns}
 \end{frame}
-\note{
-
+\note[itemize]{
+	\item En Cimmeria los niños aprenden a escalar antes que a gatear.
 }
 
 \begin{frame}{Araña gigante}
@@ -1083,8 +1108,10 @@ Y súbitamente todo el miedo y el asco se convirtieron en una profunda compasió
     \end{figure}
   \end{columns}
 \end{frame}
-\note{
-
+\note[itemize]{
+	\item La araña gigante es un adversario formidable y terrorífico.
+	\item Mató a Tauros
+	\item Además muestra una inteligencia que la diferencia de alguna bestia. Cuando su ataque inicial falla y Conan le cercena una de sus patas, es capaz de cambiar de estrategia y llevar el enfrentamiento a donde tiene la ventaja.
 }
 
 \begin{frame}{Astronautas ancestrales}
@@ -1102,8 +1129,8 @@ Y súbitamente todo el miedo y el asco se convirtieron en una profunda compasió
     \end{figure}
   \end{columns}
 \end{frame}
-\note{
-
+\note[itemize]{
+	\item
 }
 
 \begin{frame}{Mitos de Chtullu}
@@ -1122,8 +1149,8 @@ Y súbitamente todo el miedo y el asco se convirtieron en una profunda compasió
     \end{figure}
   \end{columns}
 \end{frame}
-\note{
-Mencionar lo de la apariencia de YogKhosha como Cthullu en vez de elefante.
+\note[itemize]{
+	\item Mencionar lo de la apariencia de YogKhosha como Cthullu en vez de elefante.
 }
 
 \begin{frame}{Historias anidadas}
@@ -1142,8 +1169,11 @@ Mencionar lo de la apariencia de YogKhosha como Cthullu en vez de elefante.
     \end{figure}
   \end{columns}
 \end{frame}
-\note{
-
+\note[itemize]{
+	\item Esta es otra razón de por que ToE es una de las mejores historias de Howard.
+	\item Si hay por ahí algo de que en los pulps pagaban a los escritores por palabra.
+	\item Pero aun así Howard, es un maestro de la historias naidadas y de la información extra.
+	\item No usa descripciones detalladas, mejor la usa en anécdotas y en pequeños guiños a la psicología de su personaje
 }
 
 \begin{frame}{Hechicero malvado}
@@ -1161,11 +1191,15 @@ Mencionar lo de la apariencia de YogKhosha como Cthullu en vez de elefante.
     \end{figure}
   \end{columns}
 \end{frame}
-\note{
-
+\note[itemize]{
+	\item
 }
 
 \section{Influencias}
+\note[itemize]{
+	\item
+}
+
 \begin{frame}{}
  \begin{columns}
 \column[t]{0.4\textwidth}
@@ -1197,8 +1231,8 @@ Mencionar lo de la apariencia de YogKhosha como Cthullu en vez de elefante.
 \end{figure}
 \end{columns}
 \end{frame}
-\note{
-
+\note[itemize]{
+	\item
 }
 
 \begin{frame}{Tributos de varios artistas}
@@ -1225,14 +1259,15 @@ Mencionar lo de la apariencia de YogKhosha como Cthullu en vez de elefante.
  \end{subfigure}
 \end{figure}
 \end{frame}
-\note{
-
+\note[itemize]{
+	\item Varios artistas han realizado ilustraciones sueltas de Conan para sus portafolios
+	\item Esto sucede porque Conan es uno de los títulos que le conceden más reconocimiento al portafolio de un artista.
+	\item Es algo así como si eres escritor (o guionista) de Comics uno título que viste mucho tu curriculum es Swamp Thing o Hellraiser o Batman.
+	\item Para los dibujantes, yo creo que son X-Men, Conan o Spider-man
+	\item En ese sentido muchos artistas, han hecho ilustraciones sueltas de Conan para sus portafolios y esta es en particular una historia clásica para hacer dichas ilustraciones.
 }
 
 %El último slide es igual al primero: titulo y datos de contacto
 \begin{frame}{}
     \maketitle
 \end{frame}
-\note{
-
-}
